--- a/DoenerBestellungBE/src/main/resources/application.properties
+++ b/DoenerBestellungBE/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 
 
 security.jwt.token.secret-key=dieseIstEinSehrLangerGeheimerKeyMitMindestens32Zeichen
+security.jwt.token.expire-length=3600000
